src/test/deca/context/invalid/created/declVar2.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 7: Multiple declaration of 'a'

{
    int a;
    int a;
}